2003-07-28  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-child-policy-flow-holder.c, cong-editor-child-policy-flow-holder.h, cong-editor-child-policy.c, cong-editor-child-policy.h, Makefile.am

	New files: policy objects for managing the areas created for the children of an editor node

2003-07-27  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-bin.c, cong-editor-area-border.c, cong-editor-area-composer.c, cong-editor-area-container.c, cong-editor-area-flow-holder-blocks.c, /cong-editor-area-flow-holder-inlines.c, cong-editor-area-flow-holder-single.c, cong-editor-area-pixbuf.c, cong-editor-area-spacer.c, cong-editor-area-span-tag.c, cong-editor-area-structural-tag.c, cong-editor-area-text.c, cong-editor-area-underline.c, cong-editor-area-unknown-tag.c, cong-editor-area.c, cong-editor-area.h, cong-editor-widget3.c, plugin-lists-area-listitem.c

	Split up width/height requisition calculations

	* cong-editor-node-text.h, cong-editor-widget.h

	Added some missing prototypes
	
	* cong-editor-area-flow-holder.c, cong-editor-area-flow-holder.h, cong-editor-node.c, cong-editor-node.h, cong-editor-widget3.c	

	Reorganised editor_area creation so that the flow_holders are responsible for it, with a class hierarchy.
	
	* cong-editor-area-flow-holder-blocks.c, cong-editor-area-flow-holder-blocks.h, cong-editor-area-flow-holder-inlines.c, cong-editor-area-flow-holder-inlines.h, cong-editor-area-flow-holder-single.c, cong-editor-area-flow-holder-single.h, Makefile.am

	New files
	
	* cong-document.h, cong-document.c

	Added stats to the document

2003-07-25  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-node.c, cong-editor-node.h, cong-editor-widget.h

	Moved the flow types from the editor-node files into the widget source files
	
	* cong-editor-widget3.c

	Use the flow-holder code to create and lay out the children of an XML node

	* cong-editor-area-flow-holder.c, cong-editor-area-flow-holder.h, Makefile.am 
