@@ -1,5 +1,9 @@
 2003-07-28  David Malcolm <david@davemalcolm.demon.co.uk>
 
+	* cong-editor-area-flow-holder-blocks.c, cong-editor-area-flow-holder-inlines.c, cong-editor-area-flow-holder-single.c, cong-editor-area-flow-holder.c, cong-editor-area-flow-holder.h, cong-editor-widget3.c
+
+	Use child_policy objects; editor widget no longer needs (or has) a 1-1 mapping between nodes and areas
+	
 	* cong-editor-child-policy-flow-holder.c, cong-editor-child-policy-flow-holder.h, cong-editor-child-policy.c, cong-editor-child-policy.h, Makefile.am
 
 	New files: policy objects for managing the areas created for the children of an editor node
